Fix white space not wrapped in table data in life event card

--- a/app/components/life-event/life-event-card.scss
+++ b/app/components/life-event/life-event-card.scss
@@ -56,9 +56,7 @@
 			td {
 				vertical-align: top;
 				padding-bottom: 10px;
-				overflow: hidden;
-				white-space: nowrap;
-				text-overflow: ellipsis;
+				padding-right: 25px;
 
 				&.label {
 					padding-right: $tableContentInset;
